--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </div>
 <h1>COURSES</h1>
 <div id="cont" class="classes">
-    <div class="primary"><a href="#"><img class="courses"src="file:///D://sih/primary.jpg"></a></div>
+    <div class="primary"><a href="primary.html"><img class="courses"src="file:///D://sih/primary.jpg"></a></div>
     <div class="secondary"><a href="#"><img class="courses" src="file:///D://sih/secondary.jpg"></a></div>
     <div class="inter"><a href="#"><img class="courses" src="file:///D://sih/inter.jpg"></a></div>
 </div>
