--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header">
         <nav>
             <div class="logo">
-                <a href="#home"><img src="file:///D://sih/header.png"></a>
+                <a href="#home"><img src="header.png"></a>
               </div>
             <ul class="header"> 
                 <li><a href="#home">HOME</a></li>
@@ -34,9 +34,9 @@
 </div>
 <h1>COURSES</h1>
 <div id="cont" class="classes">
-    <div class="primary"><a href="primary.html"><img class="courses"src="file:///D://sih/primary.jpg"></a></div>
-    <div class="secondary"><a href="#"><img class="courses" src="file:///D://sih/secondary.jpg"></a></div>
-    <div class="inter"><a href="#"><img class="courses" src="file:///D://sih/inter.jpg"></a></div>
+    <div class="primary"><a href="primary.html"><img class="courses"src="primary.jpg"></a></div>
+    <div class="secondary"><a href="secondary.html"><img class="courses" src="secondary.jpg"></a></div>
+    <div class="inter"><a href="inter.html"><img class="courses" src="inter.jpg"></a></div>
 </div>
 </body>
 </html>
