--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>LOGIN</title>
     <style>
         body{
-            background-image: url(file:///D://sih/supbg.jpeg);
+            background-image: url(properties/supbg.jpeg);
             background-position: center;
             background-size:cover;
         }
