--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <title>Signup</title>
     <style>
         body{
-            background-image: url(file:///D://sih/supbg.jpeg);
+            background-image: url(properties/supbg.jpeg);
             background-position: center;
             background-size: cover;
         }
