--- a/primary.html
+++ b/primary.html
@@ -20,13 +20,13 @@
         <hr>
         <br><br><br><br>
         <div class="quiz">
-            <a href="subjects.html"><img class="img" src="quiz (1).jpeg" alt="" height="250px" width="250px"></a>
+            <a href="subjects.html"><img class="img" src="properties/quiz (1).jpeg" alt="" height="250px" width="250px"></a>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="videos.html"><img class="img" src="quiz3.jpeg" alt="" height="250px" width="250px"></a>
+            <a href="videos.html"><img class="img" src="properties/quiz3.jpeg" alt="" height="250px" width="250px"></a>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href=""><img class="img" src="quiz4.jpeg" alt="" height="250px" width="250px"></a>
+            <a href=""><img class="img" src="properties/quiz4.jpeg" alt="" height="250px" width="250px"></a>
     </center>
     </div>
 </body>
