--- a/subjects.html
+++ b/subjects.html
@@ -54,14 +54,14 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="Quiz/quiz.html"><img class="img" src="science.jpeg" alt="" height="230px" width="230px"></a>
+        <a href="quiz.html"><img class="img" src="properties/science.jpeg" alt="" height="230px" width="230px"></a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="Quiz/quiz.html"><img class="img" src="WhatsApp Image 2023-09-26 at 2.06.12 PM.jpeg" alt=""
+        <a href="quiz.html"><img class="img" src="properties/WhatsApp Image 2023-09-26 at 2.06.12 PM.jpeg" alt=""
                 height="230px" width="230px"></a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="Quiz/quiz.html"><img class="img" src="social.jpeg" alt="" height="230px" width="230px"></a>
+        <a href="quiz.html"><img class="img" src="properties/social.jpeg" alt="" height="230px" width="230px"></a>
     </div>
 </body>
 
