--- a/secondary.html
+++ b/secondary.html
@@ -5,7 +5,7 @@
         <title>
             Content
         </title>
-            <link rel="stylesheet" href="style.css"/>
+            <link rel="stylesheet" href="secondary.css"/>
             
             </head>
     <body>
@@ -16,19 +16,19 @@
     <section class="boxes">
        <div class="box-card">
         <a href="quiz_new.html">
-        <img src="img_1.jpeg" alt="Not_Found" class="ima"/>
+        <img src="properties/img_1.jpeg" alt="Not_Found" class="ima"/>
        </a>
        </div>
 
        <div class="box-card">
         <a href="Tutorials.html">
-            <img src="img_2.jpeg" alt="Not_Found" class="ima"/>
+            <img src="properties/img_2.jpeg" alt="Not_Found" class="ima"/>
         </a>
        </div>
    
     <div class="box-card">
         <a href="reference.html">
-            <img src="img_3.jpeg" alt="Not_Found" class="ima"/>
+            <img src="properties/img_3.jpeg" alt="Not_Found" class="ima"/>
         </a>
        </div>
     
