--- a/inter.html
+++ b/inter.html
@@ -20,8 +20,8 @@
        <hr>
        <br><br>
        <section class="boxes">
-        <div class="box-card" ><a href="quizinter.html"><img src="proprties/quiz.jpg" width="250px" height="250px"></a></div>
-        <div class="box-card" ><a href="lab.html"><img src="proprties/lab.jpg" width="250px" height="250px"></a></div>
+        <div class="box-card" ><a href="quizinter.html"><img src="properties/quiz.jpg" width="250px" height="250px"></a></div>
+        <div class="box-card" ><a href="lab.html"><img src="properties/lab.jpg" width="250px" height="250px"></a></div>
         <div class="box-card" ><a href="tut.html"><img src="properties/links.jpg" width="250px" height="250px"></a></div>
         <div class="box-card" ><a href="ref.html"><img src="properties/books.jpg" width="250px" height="250px"></a></div>
        </section>
