--- a/secondary.html
+++ b/secondary.html
@@ -21,7 +21,7 @@
        </div>
 
        <div class="box-card">
-        <a href="Tutorials.html">
+        <a href="tutorials.html">
             <img src="properties/img_2.jpeg" alt="Not_Found" class="ima"/>
         </a>
        </div>
