--- a/reference.html
+++ b/reference.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Reference</title>
               <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            Reference
+            
         <link rel="stylesheet" href="reference.css"/>
     </head>
     <body>
