--- a/lab.html
+++ b/lab.html
@@ -9,7 +9,7 @@
     <center><h1>Choose the Subjects</h1></center>
     <hr>
     <section class="box">
-        <div class="box-card" style="color: rgb(12, 12, 46);"><a href="phy.html"><img src="properties/phy.jpeg" width="250px" height="250px"></a></div>
-        <div class="box-card" style="color: rgb(12, 12, 46);"><a href="che.html"><img src="properties/che.jpeg" width="250px" height="250px"></a></div>
-        <div class="box-card" style="color: rgb(12, 12, 46);"><a href="bio.html"><img src="properties/bio.jpeg" width="250px" height="250px"></a></div>
+        <div class="box-card" style="color: rgb(12, 12, 46);"><a href="phy.html"><img src="properties/phy.jpg" width="250px" height="250px"></a></div>
+        <div class="box-card" style="color: rgb(12, 12, 46);"><a href="che.html"><img src="properties/che.jpg" width="250px" height="250px"></a></div>
+        <div class="box-card" style="color: rgb(12, 12, 46);"><a href="bio.html"><img src="properties/bio.jpg" width="250px" height="250px"></a></div>
 </body>
