--- a/quiz_new.html
+++ b/quiz_new.html
@@ -54,13 +54,13 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="quiz1.html"><img class="img" src="properties/Science.jpeg" alt="" height="230px" width="230px"></a>
+        <a href="quiz1.html"><img class="img" src="properties/Science.jpg" alt="" height="230px" width="230px"></a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="quiz2.html"><img class="img" src="properties/Math.jpeg" alt=""height="230px" width="230px"></a>
+        <a href="quiz2.html"><img class="img" src="properties/Math.jpg" alt=""height="230px" width="230px"></a>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="quiz3.html"><img class="img" src="properties/Social.jpeg" alt="" height="230px" width="230px"></a>
+        <a href="quiz3.html"><img class="img" src="properties/Social.jpg" alt="" height="230px" width="230px"></a>
     </div>
 </body>
 
