--- a/primary.html
+++ b/primary.html
@@ -20,7 +20,7 @@
         <hr>
         <br><br><br><br>
         <div class="quiz">
-            <a href="subjects.html"><img class="img" src="properties/quiz.jpg" alt="" height="250px" width="250px"></a>
+            <a href="quiz.html"><img class="img" src="properties/quiz.jpg" alt="" height="250px" width="250px"></a>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <a href="videos.html"><img class="img" src="properties/links.jpg" alt="" height="250px" width="250px"></a>
