--- a/tut.html
+++ b/tut.html
@@ -25,35 +25,35 @@
             <div class="grid">
                 <div class="row">
                   <div class="cell">
-                    <img src="properties/1.jpeg" />
+                    <img src="properties/1.jpg" />
                   </div>
                   <div class="cell">
-                    <img src="properties/2.jpeg" />
+                    <img src="properties/2.jpg" />
                   </div>
                   <div class="cell">
-                    <img src="properties/3.jpeg" />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <img src="properties/4.jpeg" />
-                  </div>
-                  <div class="cell">
-                    <img src="properties/5.jpeg" />
-                  </div>
-                  <div class="cell">
-                    <img src="properties/6.jpeg" />
+                    <img src="properties/3.jpg" />
                   </div>
                 </div>
                 <div class="row">
                   <div class="cell">
-                    <img src="properties/7.jpeg" />
+                    <img src="properties/4.jpg" />
                   </div>
                   <div class="cell">
-                    <img src="properties/8.jpeg" />
+                    <img src="properties/5.jpg" />
                   </div>
                   <div class="cell">
-                    <img src="properties/9.jpeg" />
+                    <img src="properties/6.jpg" />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="cell">
+                    <img src="properties/7.jpg" />
+                  </div>
+                  <div class="cell">
+                    <img src="properties/8.jpg" />
+                  </div>
+                  <div class="cell">
+                    <img src="properties/9.jpg" />
                   </div>
                 </div>
               </div>
