--- a/tutorials.html
+++ b/tutorials.html
@@ -26,35 +26,35 @@
             <div class="grid">
                 <div class="row">
                   <div class="cell">
-                    <img src="1.jpg" />
+                    <img src="properties/1.jpg" />
                   </div>
                   <div class="cell">
-                    <img src="2.jpg" />
+                    <img src="properties/2.jpg" />
                   </div>
                   <div class="cell">
-                    <img src="3.jpg" />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <img src="4.jpg" />
-                  </div>
-                  <div class="cell">
-                    <img src="5.jpg" />
-                  </div>
-                  <div class="cell">
-                    <img src="6.jpg" />
+                    <img src="properties/3.jpg" />
                   </div>
                 </div>
                 <div class="row">
                   <div class="cell">
-                    <img src="7.jpg" />
+                    <img src="properties/4.jpg" />
                   </div>
                   <div class="cell">
-                    <img src="8.jpg" />
+                    <img src="properties/5.jpg" />
                   </div>
                   <div class="cell">
-                    <img src="9.jpg" />
+                    <img src="properties/6.jpg" />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="cell">
+                    <img src="properties/7.jpg" />
+                  </div>
+                  <div class="cell">
+                    <img src="properties/8.jpg" />
+                  </div>
+                  <div class="cell">
+                    <img src="properties/9.jpg" />
                   </div>
                 </div>
               </div>
