--- a/tutorials.html
+++ b/tutorials.html
@@ -87,16 +87,16 @@
 <br>
 <h4>MATHEMATICS</h4>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=7gQWPCZn3hdnXBfv&amp;list=PLVLoWQFkZbhUPr3lid5ATpymNOAfpk9-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=2caZrIC5lZxnJ3i3&amp;list=PLAyDjaXmCbojBcPOUloerhO7bt2jNbPzm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 <br>
 <h4>SCIENCE</h4>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=gLCjR7BVaDeIu4ku&amp;list=PLcJiYBaxEj80-gn5ewxbLJ3jbQux66eVO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=x4P0OM-JhCvwlxxQ&amp;list=PLAyDjaXmCbohnf-MDg4g4L3UspFt3KE9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 <h4>SOCIAL</h4>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=R3ZmZwh7dCoHEhTk&amp;list=PLVLoWQFkZbhW0rcXsCUWKK3bUAT12T_iV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=hO4ho5dWHaDV2GTv&amp;list=PLAyDjaXmCboh6HshiBchlBzqie4vA527R" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 </div>
 <br>
@@ -108,15 +108,15 @@
 <br>
 <h4>MATHEMATICS</h4>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=JwIfL_8-AOx8d1Q9&amp;list=PLPtwHGzVag7-HE5nvTvfwAZgvsv4KyDuY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=4fxFg5RYAYmv_IRI&amp;list=PLf0dYueVuajZ3m4EySlFzhpvg2TkdJoNe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 <h4>SCIENCE</h4>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=gyWTM7aYCKKepNJc&amp;list=PL9vL8QnJ37pJ9dYrY03CBuhlm95TXOgSi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=vlb9RtOLGKv93ItB&amp;list=PLf0dYueVuajaOH0CGxG5cPbiplO097UGH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 <h4>SOCIAL</h4>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=3fovMnpWIueTulWr&amp;list=PLVLoWQFkZbhVnay9XxI3B1G3-6nOsXM2L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=cwuMXzE7lk_6lY9H&amp;list=PLhf4hr_x5XyTrvpRyF6vwWvXDY_ZkqfCH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 </div>
 <br>
@@ -129,15 +129,15 @@
 <br>
 <h4>MATHEMATICS</h4>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=0Y7QW0Oi21h3LGRB&amp;list=PLPtwHGzVag7_tkDQUeF9ht6cz8NDwqIw3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=22tdCTAoItcr_uJe&amp;list=PLf0dYueVuajaHNpvbVrWRY4ziOK0XrZhV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 <h4>SCIENCE</h4>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=FXx321m3ldTHgif5&amp;list=PLcJiYBaxEj81IsxfaVxnlLvuAJGiF8A-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=ibxvqez2h6L8uEqT&amp;list=PLf0dYueVuajY_OpdGmU3u1Kirt_fbfjJN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 <h4>SOCIAL</h4>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=yyK8mRLosd_Eatje&amp;list=PLcJiYBaxEj83ZJNuVcOdo4ubZcx5m_QjS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=z7DtuiA8fAuLE2Nj&amp;list=PLhf4hr_x5XySEF5SLzjZRy7z0V2lsLMAt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
 </div>
 <br>
