--- a/signup.html
+++ b/signup.html
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div class="sup">
-        <form>
+        <form action="signup.php" method="post">
             <h1>SIGN-UP</h1>
             <input type="name" placeholder="Enter name"><br>
             <input type="email" placeholder="Email"><br>
