--- a/signup.html
+++ b/signup.html
@@ -74,9 +74,9 @@
     <div class="sup">
         <form action="signup.php" method="post">
             <h1>SIGN-UP</h1>
-            <input type="name" placeholder="Enter name"><br>
-            <input type="email" placeholder="Email"><br>
-            <input type="password" placeholder="Password" ><br>
+            <input type="name" name="name" placeholder="Enter name"><br>
+            <input type="email" name="email" placeholder="Email"><br>
+            <input type="password" name="password" placeholder="Password" ><br>
             <input type="submit" value="SIGN-UP">           
             </form>
     </div>
