--- a/signup.html
+++ b/signup.html
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div class="sup">
-        <form action="signup.php" method="post">
+        <form action="http://localhost/sups/sups.php" method="post">
             <h1>SIGN-UP</h1>
             <input type="name" name="name" placeholder="Enter name"><br>
             <input type="email" name="email" placeholder="Email"><br>
