--- a/login.html
+++ b/login.html
@@ -90,7 +90,7 @@
             <input type="email" placeholder="Email" required><i class="fa-solid fa-user" style="color: #000000;"></i><br>
             <input type="password" placeholder="Password" required><br>
             <input type="submit" value="LOGIN"><br>
-            <p>New to <b>Infotutor ?! </b></p><a href="signup.html"> Create account</a>
+            <p>New to <b>Infotutor ?! </b></p><a href="http://localhost/sups/sups.html?""> Create account</a>
         </form>
     </div>
 </body>
