--- a/signup.html
+++ b/signup.html
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div class="sup">
-        <form action="http://localhost/sups/sups.php" method="post">
+        <form action="https://dbc3-2405-201-d026-781f-4452-ed9c-93ab-6541.ngrok-free.app/sups/sups.php" method="post">
             <h1>SIGN-UP</h1>
             <input type="name" name="name" placeholder="Enter name"><br>
             <input type="email" name="email" placeholder="Email"><br>
