--- a/login.html
+++ b/login.html
@@ -43,6 +43,7 @@
             border-radius: 20px;
             width: 75%;
             background: transparent;
+            color:white;
         }
         input[type=password]{
             margin-top:8px;
@@ -50,6 +51,7 @@
             padding: 10px;
             border-radius: 20px;
             width: 75%;
+            color:white;
             background: transparent;
         }
         input[type=submit]{
