--- a/primary.html
+++ b/primary.html
@@ -26,6 +26,9 @@
             <a href="videos.html"><img class="img" src="properties/links.jpg" alt="" height="250px" width="250px"></a>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="games.html"><img class="img" src="properties/games.jpg" alt="" height="250px" width="250px"></a>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </center>
     </div>
 </body>
